Bug 319546 - Subversion plugin issuing "mkfifo" on Windows
Summary: Subversion plugin issuing "mkfifo" on Windows
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: svn (other bugs)
Version First Reported In: 2.2
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: KDE-Windows
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-08 21:40 UTC by Andrius
Modified: 2020-02-18 14:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius 2013-05-08 21:40:00 UTC
When using "Show Local SVN Changes" dolphin spawns "mkfifo", which is not valid on Windows.

Reproducible: Always

Steps to Reproduce:
1. Activate subversion plugin
2. Use "Show Local SVN Changes" in a local copy

Actual Results:  
Command prompt from where dolphin has been launched tells mkfifo is not a valid command

Expected Results:  
This should not be implemented using mkfifo, but in a more portable way.

Using MinGW binaries from installer.
Comment 1 Patrick Spendrin 2013-05-09 05:23:37 UTC
Is that plugin in the dolphin-plugins package?
Comment 2 Frank Reininghaus 2013-05-10 08:19:10 UTC
(In reply to comment #0)
> This should not be implemented using mkfifo, but in a more portable way.

Can you suggest a more portable way to do it?

(In reply to comment #1)
> Is that plugin in the dolphin-plugins package?

Yes.
Comment 3 Patrick Spendrin 2013-05-10 08:54:02 UTC
(In reply to comment #2)
> (In reply to comment #0)
> > This should not be implemented using mkfifo, but in a more portable way.
> 
> Can you suggest a more portable way to do it?

I just looked at the code and I think QTemporaryFile would be nice (for us), although that might slow down the code on Unix. There is no equivalent of a named pipe in the file system and svn also doesn't seem to have other means of giving the output in memory :-/

> 
> (In reply to comment #1)
> > Is that plugin in the dolphin-plugins package?
> 
> Yes.
Comment 4 Nikolai Krasheninnikov 2020-02-18 08:55:28 UTC
This commit fixes an issue:
https://phabricator.kde.org/R449:0df2e299f415411eef36327c8d8d4933766a94d5