Fixes svn plugin issuing "mkfifo" on Windows.

Summary:
BUG: 319546
Non-blocking portable solution without any shell use.

Reviewers: #dolphin, elvisangelaccio, meven, ngraham

Reviewed By: #dolphin, elvisangelaccio, meven

Subscribers: anthonyfieroni

Differential Revision: https://phabricator.kde.org/D26259